Optimize: 1. Avoid right-main label overlap. 2. align the submit button with "textarea".

--- a/XiaoWei/Task05/css/index.css
+++ b/XiaoWei/Task05/css/index.css
@@ -200,11 +200,11 @@ main article input {
 
 main article .input-box .left-container {
     float: left;
-    width: 30%;
+    width: 35%;
 }
 main article .input-box .right-container {
     float: left;
-    width: 70%;
+    width: 65%;
 }
 
 main article .input-box .left-container>* {
@@ -220,9 +220,10 @@ main article .input-box .right-container>* {
 }
 
 .describe-text {
+    box-sizing: border-box;
+    width: 100%;
     font-size: 14px;
     height: 100px;
-    margin-right: 10px;
 }
 
 .submit-btn {
